--- a/src/telesystem/templates/index.html
+++ b/src/telesystem/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     {% block title %}<title>КТС</title> {% endblock %}
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main_styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -13,12 +14,10 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <h3 class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    Абоненты КТС
+                    <a href="{% url 'index' %}" class="text-white text-decoration-none">Абоненты</a>
                 </h3>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="#" class="nav-link px-2 text-secondary"></a></li>
-                    <li><a href="#" class="nav-link px-2 text-white"></a></li>
-                    <li><a href="#" class="nav-link px-2 text-white"></a></li>
                     <li><a href="#" class="nav-link px-2 text-white"></a></li>
                     <li><a href="#" class="nav-link px-2 text-white"></a></li>
                 </ul>
@@ -35,12 +34,14 @@
                 </form>
 
                 <div class="text-end">
+                    <a role="button" class="btn btn-outline-warning" href="">Добавить абонента</a>
                     <a role="button" class="btn btn-danger" href="{% url 'logout' %}">Выйти</a>
                 </div>
             </div>
         </div>
     </header>
 {% endblock %}
-{% block content %} {% endblock %}
+{% block content %}
+{% endblock %}
 </body>
 </html>
