Added the form.

--- a/src/telesystem/templates/index.html
+++ b/src/telesystem/templates/index.html
@@ -34,7 +34,7 @@
                 </form>
 
                 <div class="text-end">
-                    <a role="button" class="btn btn-outline-warning" href="">Добавить абонента</a>
+                    <a role="button" class="btn btn-outline-warning" href="{% url 'add' %}">Добавить абонента</a>
                     <a role="button" class="btn btn-danger" href="{% url 'logout' %}">Выйти</a>
                 </div>
             </div>
