--- a/src/telesystem/templates/sub_change.html
+++ b/src/telesystem/templates/sub_change.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Измнение данных</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/sub_add.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
+<div class="flx">
+    <form method="POST">
+        {% csrf_token %}
+        {% if messages %}
+            <div class="mb-3">
+                {% for message in messages %}
+                    <p class="alert alert-danger">{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Имя</label>
+            {{ form.name }}
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Фамилия</label>
+            {{ form.surname }}
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Отчество</label>
+            {{ form.patronymic }}
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Паспорт</label>
+            {{ form.passport }}
+        </div>
+        <div class="mb-3">
+            <label for="city" class="form-label">Выберите город</label>
+            {{ form.cities }}
+        </div>
+        <button type="submit" class="btn btn-success">Отправить</button>
+    </form>
+</div>
 </body>
 </html>
