--- a/src/telesystem/templates/accounts/login.html
+++ b/src/telesystem/templates/accounts/login.html
@@ -11,7 +11,7 @@
 <body class="text-center">
 <main class="form-signin">
 
-    <form method="POST">
+    <form method="POST" class="form-signin">
         {% csrf_token %}
 
         <h1 class="h3 mb-3 fw-normal">Вход</h1>
